# promptly

./: .gitignore  LICENSE  README.md  claude-code-settings.json  install.sh  promptly.py  pyproject.toml  register-claude-window.sh  requirements.txt  tl  traffic_light.py
