[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "promptly-status-light"
version = "0.1.0"
description = "A tiny, movable, always-on-top status light for Claude Code (and anything else)."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Assen Dimitrov" }]
requires-python = ">=3.9"
dependencies = ["PySide6>=6.5"]
keywords = ["claude-code", "status", "macos", "qt", "overlay", "developer-tools"]
classifiers = [
    "Environment :: X11 Applications :: Qt",
    "Environment :: MacOS X",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/AssenDimitrov/promptly"
Repository = "https://github.com/AssenDimitrov/promptly"
Issues = "https://github.com/AssenDimitrov/promptly/issues"

[project.scripts]
promptly = "promptly:main"

[tool.setuptools]
py-modules = ["promptly"]
